fix: fixed visibility

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,9 +5,12 @@
     bottom: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.75s linear;
 }
 
 @media screen and (max-width: 500px) {
